ADD: split unprofessional posts away from front page

--- a/content/all.slim
+++ b/content/all.slim
@@ -4,24 +4,33 @@ title: Tommy Ku's Blog
 
 - current_date = ''
 - specials = sorted_special_articles
+section#unprofessional
+  span.icon &#9888;
+  p
+    i Some posts
+    |&nbsp;are not looking professional enough for the front page. Anyways they are all here.
 section.h-feed
   - if specials.any?
     h3 Featured
     section#special-article-list
       - specials.each do |article|
-        a.special.h-entry.u-url href=url_for(article)
+        a.special.h-entry.u-url href="/#{url_for(article)}"
           figure.side-figure
-            img src="#{url_for(article)}#{article[:preview_banner]}" alt="Preview image for #{article[:title]}"
+            img src="/#{url_for(article)}#{article[:preview_banner]}" alt="Preview image for #{article[:title]}"
           h4.p-name = article[:title]
   ul#article-list
     - sorted_articles.each do |article|
-      - next if preview?(article) || special?(article) || unprofessional?(article)
+      - next if preview?(article) || special?(article)
       - if current_date != attribute_to_time(article[:created_at]).strftime('%Y.%m')
         li.header
           h4
             time
               = current_date = attribute_to_time(article[:created_at]).strftime('%Y.%m')
       li.h-entry
-        == link_to article[:title], url_for(article), class: "u-url p-name"
+        - if unprofessional?(article)
+          i
+            == link_to article[:title], "/#{url_for(article)}", class: "u-url p-name"
+        - else
+          == link_to article[:title], "/#{url_for(article)}", class: "u-url p-name"
         - if abstract?(article)
           p.abstract.p-summary == abstract(article)
